<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Busking  Planet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">login</string>
    <string name="temp_musician">temp_musician</string>
    <string name="temp_normal">temp_normal</string>
    <string name="team_page">팀페이지</string>
    <string name="find_team_member">동료찾기</string>
    <string name="find_musician">뮤지션 찾기</string>
    <string name="favorite">즐겨찾기</string>
    <string name="logout">logout</string>
    <string name="app_id">1388316628071354</string>
    <string name="paper">롤링페이퍼</string>
    <string name="complete">완료</string>
    <string name="inner_140">140자 이내</string>
    <string name="sticker">스티커</string>
    <string name="handwriting">손글씨</string>
    <string name="paper_next_step">다음단계</string>
    <string name="next">다음</string>
    <string name="writing">글쓰기</string>
    <string name="decorate">꾸미기</string>
    <string name="please_input">입력해주세요.</string>

</resources>
