<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    android:orientation="vertical" >

    <!-- 타이틀 -->
    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#01d0d2" >

        <ImageView
            android:id="@+id/paper_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="5dip"
            android:background="@xml/menu" />

        <TextView
            android:id="@+id/paper_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/paper"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/paper_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/next"
            android:layout_marginRight="5dip"
            android:textColor="#ffffff" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#000000"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/writing"
            android:gravity="center"
            android:textColor="#01d0d2" />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/decorate"
            android:gravity="center"
            android:textColor="#ffffff" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/paper_space"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eaeaea"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:background="@drawable/red_ribbon"
            android:gravity="center" >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/paper"
               android:textSize="20dip"
               android:textStyle="bold"
               android:textColor="#ffffff"
               android:layout_marginBottom="10dip"/>
       </LinearLayout>

        <EditText
            android:id="@+id/paper_string"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            android:gravity="top|left"
            android:hint="@string/inner_140" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom" >
                        <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/paper_next_step"
                android:textColor="#01d0d2" />
            
        </LinearLayout>

</LinearLayout>
    
</LinearLayout>